compiler/tools/fpp-check/test/invalid_symbols/module_as_type.fpp
module M {
 
  array a = [3] M

}
